* PBEM posting fixes and cleanup (tclayton)
*   don't proxy PBEMMessagePoster, remove serialization (was broken in multi-player)
*   fix EndTurnDelegate serialization
*   only show Turn Summary Posting widgets if posting is enabled

* fix bug [ 1825831 ] in multiplayer mode, all players can edit (tclayton)

* fix bug [ 1825841 ] comment mode split bar visible (tclayton)

* WeakAi improvements (masch)
*   fix in land route calculation (does not take neutrals into account)
*   improvement in Non-combat move. Moves towards enemy territories even if there are no units.
*   purchase 20% transports if player is amphibious. Can boost that - buy
*   only transports if landing point is heavy armed e.g. UK or Japan
*   Try to capture unprotected land in amphibious combat ( 1 transport on different route )
*   Ignore channel feature for sea routes, if endpoint is on channel territory ( otherwise you cannot attack that)

* patch [ 1827892 ] Fix NPE crash when loading PBEM game (rrowell)

* for installer with java, update embeded jre to 1.6 (sgb)

* fix bug [ 1823400 ] Filename typo causes Exception to be thrown (sgb)

* fix bug [ 1825576 ] Missing entry in four_if_by_sea.xml (sgb)

* fix bug [ 1767304 ] Great War v.1.5 sz67 to sz57 bug (sgb)

* fix bug [ 1563219 ] Possible to buy more units than can be placed (4th ed rules) (sgb)

* fix bug [ 1535135 ] loading save game bug (sgb)

* fix bug [ 1718350 ] AA guns on LL fire once (sgb)

* upgrade to looks 2.1.4 (sgb)

* partial fix for bug [ 1750148 ] Transport error unloading to enemy territory from hostile water (sgb)

* fix bug [ 1753871 ] SaveGameFileChooser bug (sgb)

* fix bug [ 1692668 ] AI UK loads US troops on UK turn (sgb)

* new Territory/Production summary options for Turn Summary (tclayton)

* fix game xml files and PlayerList class to preserve proper player ordering (tclayton)

* new Comment Log feature for adding comments/trash talk to game history (tclayton)

* new PBEM Turn Summary posting feature (tclayton)
